T-11083 theme: Fix overlapping elements in the footer of the Kiwifruit theme
Reviewed-on: https://review.totaralms.com/3617
Tested-by: Jenkins Automation <jenkins@totaralms.com>

--- a/theme/kiwifruit/style/core.css
+++ b/theme/kiwifruit/style/core.css
@@ -433,6 +433,7 @@ p.errormessage {
     height: auto !important;
     height: 100%;
     margin: 0 auto -80px;
+    padding-bottom: 80px; /*height of footer*/
 }
 #wrapper {
     background:transparent;
